# s2-geometry-library

./: .gitignore
geometry/: CMakeLists.txt  s2.cc  s2cellid.cc  s2polygon.cc  s2polygonbuilder.cc  s2regioncoverer.cc
geometry/base/: port.h  stl_decl_msvc.h
geometry/s2/: s2.h  s2cellid.h  s2polygonbuilder.h
geometry/strings/: split.cc  split.h  strutil.cc  strutil.h
geometry/tests/: CMakeLists.txt  s2polygonbuilder_test.cc  s2testing.cc
geometry/util/coding/: coder.h
geometry/util/hash/: hash.h
